--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
+  <nav>
+      <ul>
+        <li>option1</li>
+        <li>option2</li>
+      </ul>
+  </nav>
+  
   <script src="js/main.js"></script>
 </body>
-
 </html>
