--- a/embed/index.html
+++ b/embed/index.html
@@ -12,8 +12,8 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/SEO/css/normalize.css">
+  <link rel="stylesheet" href="/SEO/css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -21,14 +21,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <nav>
-      <ul>
-        <li>option1</li>
-        <li>option2</li>
-      </ul>
-  </nav>
+  <p>Projects</p>
+  <script type="text/javascript" src="https://c3esh604.caspio.com/dp/05ff4000604b95128f08477594bd/emb"></script>
   
-  <script src="js/main.js"></script>
+  <script src="/SEO/js/main.js"></script>
 </body>
 </html>
