--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <nav>
       <ul>
-        <li>option1</li>
-        <li>option2</li>
+        <li><a href="embed/">Embed Deployment</a></li>
+        <li><a href="iframe/">iFrame Deployment</a></li>
       </ul>
   </nav>
   
