--- a/embed/project/index.html
+++ b/embed/project/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Projects</p>
+  <h3><a href="..">&lt; Projects</a></h3>
 <script type="text/javascript" src="https://c3esh604.caspio.com/dp/05ff4000e53d7f7cb1d240d6a28c/emb"></script>
   
   <script src="/SEO/js/main.js"></script>
