--- a/embed/index.html
+++ b/embed/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Projects</p>
+  <h3>Projects</h3>
   <script type="text/javascript" src="https://c3esh604.caspio.com/dp/05ff4000604b95128f08477594bd/emb"></script>
   
   <script src="/SEO/js/main.js"></script>
