--- a/embed/project/index.html
+++ b/embed/project/index.html
@@ -22,7 +22,10 @@
 
   <!-- Add your site or application content here -->
   <h3><a href="..">&lt; Projects</a></h3>
-<script type="text/javascript" src="https://c3esh604.caspio.com/dp/05ff4000e53d7f7cb1d240d6a28c/emb"></script>
+  <h4>Project Details</h4>
+  <script type="text/javascript" src="https://c3esh604.caspio.com/dp/05ff40000372547b204e4ba08c26/emb"></script>
+  <h4>Project Tags</h4>
+  <script type="text/javascript" src="https://c3esh604.caspio.com/dp/05ff4000e53d7f7cb1d240d6a28c/emb"></script>
   
   <script src="/SEO/js/main.js"></script>
 </body>
