--- a/embed/project/index.html
+++ b/embed/project/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <h3><a href="..">&lt; Projects</a></h3>
+  <p><a href="..">&lt; Projects</a></p>
   <h4>Project Details</h4>
   <script type="text/javascript" src="https://c3esh604.caspio.com/dp/05ff40000372547b204e4ba08c26/emb"></script>
   <h4>Project Tags</h4>
