--- a/embed/index.html
+++ b/embed/index.html
@@ -11,6 +11,8 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
+  
+  <meta name="google-site-verification" content="KabnSInOvQFTzy-q8ZOyYY_ufiGEa54X3qg1MYBAr54" />
 
   <link rel="stylesheet" href="/SEO/css/normalize.css">
   <link rel="stylesheet" href="/SEO/css/main.css">
