--- a/iframe/index.html
+++ b/iframe/index.html
@@ -24,7 +24,7 @@
 
   <!-- Add your site or application content here -->
   <h3>Projects</h3>
-  <iframe name="dir1 Search and Report" title="dir1 Search and Report" src="https://c0lqb000.qa15.ucaspio.com/dp/c64000008a56b0ec5e304cceafe5">Sorry, but your browser does not support frames.</iframe>
+  <iframe name="dir1 Search and Report" title="dir1 Search and Report" src="https://c0lqb000.qa15.ucaspio.com/dp/c64000008a56b0ec5e304cceafe5" frameborder="0" style="width: 100%; height: 300px;">Sorry, but your browser does not support frames.</iframe>
   <script src="/SEO/js/main.js"></script>
 </body>
 </html>
